tests/cases/smoke/invalid/expr_truthiness_if.ty
var count = 1
if count {
    print(count)
}
